# image-colorization

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  colorize_image.py  colorize_video.py  pyproject.toml  train.py
colorizer/: __init__.py  config.py
colorizer/data/: dataset.py
colorizer/engine/: __init__.py  train.py
colorizer/models/: colorizer_net.py
colorizer/utils/: __init__.py  saving.py  seed.py  split_ds.py
