[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "ruff>=0.13.2"
]

[project]
dependencies = [
  "kornia>=0.8.1",
  "numpy>=2.3.2",
  "scikit-image>=0.25.2",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "tqdm>=4.67.1",
  "wandb>=0.21.3"
]
name = "colorizer"
requires-python = ">=3.12"
version = "0.1.0"
